--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.26.0"
+		"axios": "^0.26.0",
+		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.0",
+		"@types/lodash": "^4.14.178",
 		"@types/node": "^17.0.18",
 		"dotenv": "^16.0.0",
 		"jest": "^27.5.1",
