refactor(getuser): return an instance of the User class, rather than using hard to maintain typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": false,
 		"skipLibCheck": true,
-		"typeRoots": ["./types", "./node_modules/@types"]
+		"baseUrl": "./src",
+		"paths": {
+			"~structures/*": ["./structures/*"]
+		},
+		"plugins": [{ "transform": "ts-transform-paths" }]
 	}
 }
