--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"ts-jest": "^27.1.3",
+		"ts-transform-paths": "^2.0.3",
+		"ttypescript": "^1.5.13",
 		"typescript": "^4.5.5"
 	}
 }
