--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "affinity",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"test": "jest --setupFiles dotenv/config --watchAll --verbose",
-		"lint": "prettier src --write"
+		"lint": "prettier src --write",
+		"commit": "cz"
 	},
 	"keywords": [],
 	"author": "",
@@ -18,9 +19,13 @@
 		"@types/jest": "^27.4.0",
 		"@types/lodash": "^4.14.178",
 		"@types/node": "^17.0.18",
+		"commitizen": "^4.2.4",
+		"cz-conventional-changelog": "^3.3.0",
 		"dotenv": "^16.0.0",
+		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
+		"pretty-quick": "^3.1.3",
 		"ts-jest": "^27.1.3",
 		"ts-transform-paths": "^2.0.3",
 		"ttypescript": "^1.5.13",
