--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"~helpers/*": ["./helpers/*"],
 			"~affinity": ["./index.ts"],
 			"~constants": ["./constants.ts"],
-			"~errors/*": ["./errors/*"]
+			"~errors/*": ["./errors/*"],
+			"~defaults": ["./defaultOptions.ts"]
 		},
 		"plugins": [{ "transform": "ts-transform-paths" }]
 	}
