--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "jest --setupFiles dotenv/config --verbose",
 		"test:watch": "npm run test --watchAll",
 		"lint": "prettier src --write",
-		"commit": "cz"
+		"commit": "cz",
+		"build": "gulp"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,12 +18,18 @@
 		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
+		"@types/gulp": "^4.0.9",
+		"@types/gulp-uglify": "^3.0.7",
 		"@types/jest": "^27.4.0",
 		"@types/lodash": "^4.14.178",
 		"@types/node": "^17.0.18",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
 		"dotenv": "^16.0.0",
+		"gulp": "^4.0.2",
+		"gulp-cli": "^2.3.0",
+		"gulp-typescript": "^6.0.0-alpha.1",
+		"gulp-uglify": "^3.0.2",
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
