--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
+		"rimraf": "^3.0.2",
 		"ts-jest": "^27.1.3",
 		"ts-transform-paths": "^2.0.3",
 		"ttypescript": "^1.5.13",
