feat(beatmap): squash dev into main and add beatmaps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
 		"**/Thumbs.db": true,
 		"**/.nvmrc": true,
 		"**/pnpm-lock.yaml": true,
-		"**/.czrc": true
+		"**/.czrc": true,
+		"**/node_modules": true,
+		"**/.husky": true
 	},
 	"files.associations": {
 		".czrc": "json"
