--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "jest --setupFiles dotenv/config --watchAll --verbose",
+		"test": "jest --setupFiles dotenv/config --verbose",
+		"test:watch": "npm run test --watchAll",
 		"lint": "prettier src --write",
-		"commit": "cz"
+		"commit": "cz",
+		"build": "gulp"
 	},
 	"keywords": [],
 	"author": "",
@@ -16,16 +18,23 @@
 		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
+		"@types/gulp": "^4.0.9",
+		"@types/gulp-uglify": "^3.0.7",
 		"@types/jest": "^27.4.0",
 		"@types/lodash": "^4.14.178",
 		"@types/node": "^17.0.18",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
 		"dotenv": "^16.0.0",
+		"gulp": "^4.0.2",
+		"gulp-cli": "^2.3.0",
+		"gulp-typescript": "^6.0.0-alpha.1",
+		"gulp-uglify": "^3.0.2",
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
+		"rimraf": "^3.0.2",
 		"ts-jest": "^27.1.3",
 		"ts-transform-paths": "^2.0.3",
 		"ttypescript": "^1.5.13",
