--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es2016",
+		"target": "es2020",
 		"module": "commonjs",
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
@@ -11,9 +11,12 @@
 		"paths": {
 			"~structures/*": ["./structures/*"],
 			"~helpers/*": ["./helpers/*"],
-			"~affinity": ["./index.ts"],
-			"~constants": ["./constants.ts"]
+			"~affinity": ["./index"],
+			"~constants": ["./constants"],
+			"~errors/*": ["./errors/*"],
+			"~defaults": ["./defaultOptions"]
 		},
-		"plugins": [{ "transform": "ts-transform-paths" }]
+		"plugins": [{ "transform": "ts-transform-paths" }],
+		"declaration": true
 	}
 }
