--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "jest --setupFiles dotenv/config --verbose",
+		"test": "jest --setupFiles dotenv/config --verbose --forceExit",
 		"test:watch": "npm run test --watchAll",
 		"lint": "prettier src --write",
 		"commit": "cz",
