--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"test:watch": "npm run test --watchAll",
 		"lint": "prettier src --write",
 		"commit": "cz",
-		"build": "gulp"
+		"build": "gulp",
+		"ppExample": "ts-node example/ppLeaderboard.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -36,6 +37,7 @@
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
 		"ts-jest": "^27.1.3",
+		"ts-node": "^10.5.0",
 		"ts-transform-paths": "^2.0.3",
 		"ttypescript": "^1.5.13",
 		"typescript": "^4.5.5"
