feat(pp): add standard calculator
outdated, uses oppai - look into improvement in the future

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.26.0",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"ojsama": "^2.2.0"
 	},
 	"devDependencies": {
 		"@types/gulp": "^4.0.9",
