--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "affinity",
+	"name": "affinity-osu",
 	"version": "1.0.0",
 	"description": "",
 	"main": "dist/index.js",
@@ -8,14 +8,16 @@
 		"test:watch": "npm run test --watchAll",
 		"lint": "prettier src --write",
 		"commit": "cz",
-		"build": "gulp"
+		"build": "gulp",
+		"ppExample": "ts-node example/ppLeaderboard.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.26.0",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"ojsama": "^2.2.0"
 	},
 	"devDependencies": {
 		"@types/gulp": "^4.0.9",
@@ -36,6 +38,7 @@
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
 		"ts-jest": "^27.1.3",
+		"ts-node": "^10.5.0",
 		"ts-transform-paths": "^2.0.3",
 		"ttypescript": "^1.5.13",
 		"typescript": "^4.5.5"
