feat(user events): fetch user events and type them

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
 		"**/pnpm-lock.yaml": true,
 		"**/.czrc": true,
 		"**/node_modules": true,
-		"**/.husky": true
+		"**/dist": true
 	},
 	"files.associations": {
 		".czrc": "json"
