docs: fix docs deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
 		"**/pnpm-lock.yaml": true,
 		"**/.czrc": true,
 		"**/node_modules": true,
+		"**/.husky": true,
+		"**/.vercel": true,
 		"**/dist": true
 	},
 	"files.associations": {
