--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "jest --setupFiles dotenv/config --verbose --forceExit",
-		"test:watch": "npm run test --watchAll",
-		"lint": "prettier src --write",
 		"commit": "cz",
 		"build": "gulp",
-		"ppExample": "ts-node example/ppLeaderboard.ts"
+		"lint": "prettier src --write",
+		"test": "jest --setupFiles dotenv/config --verbose --forceExit",
+		"test:watch": "npm run test --watchAll",
+		"examples:pp": "ts-node example/ppLeaderboard.ts",
+		"docs:deps": "cd ./docs && pnpm install",
+		"docs:start": "cd ./docs && pnpm start",
+		"docs:build": "cd ./docs && pnpm build",
+		"docs:serve": "cd ./docs && pnpm serve",
+		"prepare": "npx only-allow pnpm && pnpm docs:deps"
 	},
 	"keywords": [],
 	"author": "",
@@ -34,6 +39,8 @@
 		"gulp-uglify": "^3.0.2",
 		"husky": "^7.0.4",
 		"jest": "^27.5.1",
+		"only-allow": "^1.1.0",
+		"pnpm": "^6.32.2",
 		"prettier": "^2.5.1",
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
