--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "jest --setupFiles dotenv/config --verbose --forceExit",
 		"test:watch": "npm run test --watchAll",
 		"examples:pp": "ts-node example/ppLeaderboard.ts",
+		"examples:replay": "ts-node example/downloadReplay.ts",
 		"docs:deps": "cd ./docs && pnpm install",
 		"docs:start": "cd ./docs && pnpm start",
 		"docs:build": "cd ./docs && pnpm build",
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@types/gulp": "^4.0.9",
 		"@types/gulp-uglify": "^3.0.7",
+		"@types/inquirer": "^8.2.0",
 		"@types/jest": "^27.4.0",
 		"@types/lodash": "^4.14.178",
 		"@types/node": "^17.0.18",
@@ -38,6 +40,7 @@
 		"gulp-typescript": "^6.0.0-alpha.1",
 		"gulp-uglify": "^3.0.2",
 		"husky": "^7.0.4",
+		"inquirer": "^8.2.1",
 		"jest": "^27.5.1",
 		"only-allow": "^1.1.0",
 		"pnpm": "^6.32.2",
