--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -7,7 +7,8 @@
 			"~structures/*": ["../src/structures/*"],
 			"~helpers/*": ["../src/helpers/*"],
 			"~affinity": ["../src/Affinity"],
-			"~functions/*": ["../src/functions/*"]
+			"~functions/*": ["../src/functions/*"],
+			"~auth/*": ["../src/auth/*"]
 		}
 	}
 }
